syntax = "proto3";

option go_package = "./pb";

service CacheNode {
  // 请求数据，如果缓存中没有数据或租约过期，则从中心节点请求数据
  rpc OutdateData(OutdateDataRequest) returns (OutdateDataResponse);
}

service CenterNode {
  // 请求数据，返回数据和租约时间
  rpc RequestData(RequestDataRequest) returns (RequestDataResponse);
}

message OutdateDataRequest {
  string data_name = 1;
}

message OutdateDataResponse {
  bool success = 1;
}

message RequestDataRequest {
  string data_name = 1;
}

message RequestDataResponse {
  string data = 1;
  int64 lease = 2;
}
